// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTable > should have a column align to center if its type is icon 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper ec-table-head__cell-wrapper--is-type-icon"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell ec-table__cell--is-type-icon"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell ec-table__cell--is-type-icon"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should have a column align to the right if its type is currency 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper ec-table-head__cell-wrapper--is-type-currency"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell ec-table__cell--is-type-currency"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell ec-table__cell--is-type-currency"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should not render if no props are supplied 1`] = `<!--v-if-->`;

exports[`EcTable > should not render if not provided with an empty array of data 1`] = `<!--v-if-->`;

exports[`EcTable > should not render if not provided with any data 1`] = `<!--v-if-->`;

exports[`EcTable > should only render custom row if "isCustomRowShown" is true 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table tw-table-fixed"
    >
      <!--v-if-->
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            colspan="2"
          >
            
            <p>
              Custom row
            </p>
            
          </td>
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            colspan="2"
          >
            
            <p>
              Custom row
            </p>
            
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with data and columns 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with data and columns, with footer switched on 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <tfoot
        class="ec-table-footer"
        data-test="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              
              
              <p>
                Random text
              </p>
              
              
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with data but no columns 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!--v-if-->
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with data but no columns, and footer switched on 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!--v-if-->
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <tfoot
        class="ec-table-footer"
        data-test="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              
              
              <p>
                Random text
              </p>
              
              
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with empty row and no columns, with footer switched on 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!--v-if-->
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          
        </tr>
        
      </tbody>
      <tfoot
        class="ec-table-footer"
        data-test="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
          >
            <div
              class="ec-table-footer__contents"
            >
              
              
              <p>
                Random text
              </p>
              
              
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable > should render as expected if provided with rows and columns, with footer switched on and the title given 1`] = `
<div>
  <div
    class="ec-table__title"
  >
    Title example
  </div>
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      aria-label="Title example"
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <tfoot
        class="ec-table-footer"
        data-test="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              
              
              <p>
                Random text
              </p>
              
              
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable > should render custom row if window width is lower than 768px 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table tw-table-fixed"
    >
      <!--v-if-->
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            colspan="2"
          >
            
            <p>
              Custom row
            </p>
            
          </td>
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          <td
            colspan="2"
          >
            
            <p>
              Custom row
            </p>
            
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;

exports[`EcTable > should render slots as expected 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            <p>
              bar
            </p>
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            <p>
              doodads
            </p>
            
          </td>
          
        </tr>
        
      </tbody>
      <tfoot
        class="ec-table-footer"
        data-test="ec-table-footer"
      >
        <tr>
          <td
            class="ec-table-footer__cell"
            colspan="2"
          >
            <div
              class="ec-table-footer__contents"
            >
              
              
              <p>
                Random text
              </p>
              
              
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`EcTable > should render sorting as expected 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Lorem
        </span>
        <!--v-if-->
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span
          class="ec-table-head__cell-text"
        >
          Ipsum
        </span>
        <!--v-if-->
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
    
  </tr>
</thead>
`;

exports[`EcTable > should render the style with the max-width on each cell of the column that have the prop given 1`] = `
<div>
  <!--v-if-->
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <thead
        class="ec-table-head"
        data-test="ec-table-head"
      >
        <tr>
          
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--0"
            scope="col"
            style="max-width: 250px;"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text ec-table-head__cell-text--has-max-width"
              >
                Lorem
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          <th
            class="ec-table-head__cell"
            data-test="ec-table-head__cell ec-table-head__cell--1"
            scope="col"
          >
            <span
              class="ec-table-head__cell-wrapper"
            >
              <span
                class="ec-table-head__cell-text"
              >
                Ipsum
              </span>
              <!--v-if-->
              <!--v-if-->
            </span>
          </th>
          
        </tr>
      </thead>
      <tbody>
        
        <tr
          class=""
          data-test="ec-table__row ec-table__row--0"
        >
          
          <td
            class="ec-table__cell ec-table__cell--has-max-width"
            data-test="ec-table__cell ec-table__cell--0"
            style="max-width: 250px;"
          >
            
            foo
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            bar
            
          </td>
          
        </tr>
        <tr
          class=""
          data-test="ec-table__row ec-table__row--1"
        >
          
          <td
            class="ec-table__cell ec-table__cell--has-max-width"
            data-test="ec-table__cell ec-table__cell--0"
            style="max-width: 250px;"
          >
            
            widgets
            
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            
            doodads
            
          </td>
          
        </tr>
        
      </tbody>
      <!--v-if-->
    </table>
  </div>
</div>
`;
